--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On
 # The base URL path
 # If your URL is www.example.com/, then use /
 # If your URL is www.example.com/site_folder/www, then use /site_folder/www/
-RewriteBase /
+RewriteBase /foodrandom2
 
 # Do not enable rewriting for files or directories that exist
 RewriteCond %{REQUEST_FILENAME} !-d
